--- a/Front-End(Cadastro-usuarios)/cadastro-usuarios/src/index.css
+++ b/Front-End(Cadastro-usuarios)/cadastro-usuarios/src/index.css
@@ -8,5 +8,5 @@
 body {
   min-height: 100vh;
   width: 100vw;
-  background: linear-gradient(180deg, #363467 0%, rgba(30, 29, 79, 0.8) 50%, #C9DCB9 100%);
+  background: linear-gradient(180deg, #C9DCB9 0%, rgba(30, 29, 79, 0.8) 50%, #363467 100%);;
 }
